# prompt-manager-cli

./: README.md  pyproject.toml
.pm/: template.md
.pm/prompts/: prompt-2026-01-05-13-35-8dbf629.md  prompt-2026-01-05-13-46-43d1214.md  prompt-2026-01-05-13-58-b602e29.md  prompt-2026-01-06-09-15-7f61910.md  prompt-2026-01-06-09-52-5c0ad60.md
prompt_manager_cli/: __init__.py  __main__.py  cli.py  utils.py
tests/: __init__.py  test_cli.py  test_utils.py
